<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.forrest.gymr.ConfigProfileActivity">

    <!--  <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="@dimen/activity_horizontal_margin"
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:layout_marginRight="@dimen/activity_horizontal_margin"
          android:layout_marginTop="125dp"
          android:background="@android:color/white"
          app:cardCornerRadius="2dp"
          app:cardElevation="3dp"
          app:cardUseCompatPadding="true"
          app:contentPadding="@dimen/activity_horizontal_margin"> -->

    <LinearLayout
        android:id="@+id/config_main_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/config_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="200px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:text="@string/config_name_string"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/config_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:text="@string/config_gender_pref_string"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/config_gender_pref_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/config_height_string"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/config_edit_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="left"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/config_weight_string"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/config_edit_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="left"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/config_bench_string"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/config_edit_bench"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="left"
                    android:inputType="number" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/config_squat_string"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/config_edit_squat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="left"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/config_deadlift_string"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/config_edit_deadlift"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="left"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- </android.support.v7.widget.CardView> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/config_main_form"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_confirm_string"
            android:id="@+id/config_confirm_btn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/config_cancel_string"
            android:id="@+id/config_cancel_btn"/>

    </LinearLayout>

</RelativeLayout>
